[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/MessageContainer.gd" type="Script" id=2]
[ext_resource path="res://Scripts/MessageInput.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MessageContainer" type="VBoxContainer" parent="."]
margin_right = 1016.0
margin_bottom = 550.0
script = ExtResource( 2 )

[node name="messages" type="RichTextLabel" parent="MessageContainer"]
margin_right = 1016.0
margin_bottom = 550.0
size_flags_vertical = 3
text = "hello"
fit_content_height = true

[node name="MessageInput" type="HBoxContainer" parent="."]
margin_left = 4.0
margin_top = 558.0
margin_right = 1004.0
margin_bottom = 598.0
script = ExtResource( 3 )

[node name="MessageInputBox" type="LineEdit" parent="MessageInput"]
margin_right = 859.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.32

[node name="SendButton" type="Button" parent="MessageInput"]
margin_left = 863.0
margin_right = 1000.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Send"

[connection signal="addToMessageLog" from="." to="MessageContainer" method="_on_Control_addToMessageLog"]
[connection signal="message_sent" from="MessageInput" to="." method="_on_MessageInput_message_sent"]
[connection signal="text_entered" from="MessageInput/MessageInputBox" to="MessageInput" method="_on_MessageInputBox_text_entered"]
[connection signal="pressed" from="MessageInput/SendButton" to="MessageInput" method="_on_SendButton_pressed"]
